<resources>
    <string name="app_name">Music Player</string>
    <string name="play">Play</string>
    <string name="pause">||</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="resource_title">Tomb Raider II Soundtrack - 02 - Venice Violins</string>
    <string name="starting_duration">0 min, 0 sec</string>
</resources>